--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.15.0",
@@ -20,7 +21,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@fastify/type-provider-typebox": "^5.2.0",
     "@prisma/client": "^6.15.0",
+    "@sinclair/typebox": "^0.34.41",
+    "dotenv": "^17.2.2",
     "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1"
   }
