--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,7 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "isolatedModules": false,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
