--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/dotenv": "^6.1.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.15.0",
@@ -24,8 +26,10 @@
     "@fastify/type-provider-typebox": "^5.2.0",
     "@prisma/client": "^6.15.0",
     "@sinclair/typebox": "^0.34.41",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "fastify": "^5.5.0",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
