modify : prisma client path 수정, main.ts에서 start 함수 호출 누락된 것 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,8 +51,9 @@
     "skipLibCheck": true,
   },
   "include":[
-    "src/**/*"
-, "node_modules/prisma"  ],
+    "src/**/*", 
+    "node_modules/prisma" 
+  ],
   "exclude": [
     "document",
     "backup"
