--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.1.0",
     "@fastify/type-provider-typebox": "^5.2.0",
     "@prisma/client": "^6.15.0",
     "@sinclair/typebox": "^0.34.41",
